made more responsive

--- a/signup.html
+++ b/signup.html
@@ -66,8 +66,8 @@
               <img class="w-16 h-16 rounded-full border-2 border-slate-800" src="images/avatar-04.jpg" alt="Avatar 4">
             </div>
             <div class="px-4 text-left">
-              <h2 class="text-5xl lg:text-6xl text-white font-[Hanken_Grotesk] font-bold  py-4">Get a taste of the user-centric platform </h2>
-              <ul>
+              <h2 class="text-5xl lg:text-6xl md:text-2xl text-white font-[Hanken_Grotesk] font-bold py-4">Get a taste of the user-centric platform </h2>
+              <ul class="space-y-2 sm:space-y-6">
                 
                 <li class="flex items-center gap-2">
                   <span class="text-green-500 w-4 h-4 flex items-center justify-center">
@@ -95,7 +95,7 @@
                       <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                     </svg>
                   </span>
-                  <span class="text-xl text-slate-500">
+                  <span class="text-xl text-slate-500 mb-5">
                     Eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </span>
                 </li>
