--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
           
             <section class="py-12 font-[Inter] font-16px mb-10">
-              <div class="grid grid-cols-1 md:grid-cols-3 gap-10 px-6 mx-8">
+              <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 gap-10 px-6 mx-8">
               <div class="text-center ">
                <img class="mx-auto w-10 h-10 rounded-full" src="/images/testimonial-01.jpg">
                
@@ -205,7 +205,7 @@
               <img class="absolute top-0 left-12" src="images/features-illustration.svg"/>
 
               <div>
-                <h2 class="text-5xl lg:text-6xl text-white text-center font-[Hanken_Grotesk] font-bold">Many tools to express your<br/> creativity</h2>
+                <h2 class="text-5xl lg:text-6xl md:text-3xl text-white text-center font-[Hanken_Grotesk] font-bold">Many tools to express your<br/> creativity</h2>
                 <p class="text-center text-xl text-slate-600 py-4 ">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br/> deserunt mollit anim id est.</p>
               </div>
 
@@ -751,7 +751,7 @@
 
             <section class="relative shadow-2xl py-8 mt-8">
               <div>
-                <img src="images/cta-illustration.svg" class="absolute hidden md:block">
+                <img src="images/cta-illustration.svg" class="absolute hidden md:block pointer-events-none">
               </div>
               <div>
                 <h2 class="flex justify-center text-center text-5xl text-white py-16 font-['Hanken_Grotesk'] font-semibold">Join the most flexible<br class="block lg:hidden"/> user-<br class="hidden lg:block"/> centric platform for teams</h2>
