mobile view fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </style>
 
 </head>
-<body class="border-gray-200 bg-slate-900 px-6">
+<body class="overflow-x-hidden overflow-y-auto min-h-screen border-gray-200 bg-slate-900 px-6">
     <header class="relative">
       <div class="illustrator">
         <img src="images/hero-illustration.svg" class="absolute hidden md:block pointer-events-none ">
@@ -55,8 +55,8 @@
               </div>
             </div>
             <div class="font-[Inter] flex items-center gap-4 lg:gap-10">
-              <a href="/signin.html" class="text-md text-slate-500 px-2">Sign In</a>
-              <a href="/signup.html" class="text-md bg-indigo-500 text-white px-4 py-2 rounded">
+              <a href="./signin.html" class="text-md text-slate-500 px-2">Sign In</a>
+              <a href="./signup.html" class="text-md bg-indigo-500 text-white px-4 py-2 rounded">
                 Get Started <span class="text-blue-400">-&gt;</span>
               </a>
             </div>
@@ -422,37 +422,37 @@
 
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="rounded-full bg-slate-900 w-20 h-20 flex items-center justify-center">
-                      <img src="/images/integration-icon-01.svg" class="w-12 h-12">
+                      <img src="./images/integration-icon-01.svg" class="w-12 h-12">
                     </div>
                   </div>
                   
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="rounded-full bg-slate-900 w-20 h-20 flex items-center justify-center">
-                      <img src="/images/integration-icon-02.svg" class="w-12 h-12">
+                      <img src="./images/integration-icon-02.svg" class="w-12 h-12">
                     </div>
                   </div>
 
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="flex items-center  rounded-full bg-slate-900 w-20 h-20  justify-center">
-                      <img src="/images/integration-icon-03.svg" class="w-12 h-12">
+                      <img src="./images/integration-icon-03.svg" class="w-12 h-12">
                     </div>
                   </div>
 
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="rounded-full bg-slate-900 w-20 h-20 flex items-center justify-center">
-                      <img src="/images/integration-icon-04.svg" class="w-12 h-12">
+                      <img src="./images/integration-icon-04.svg" class="w-12 h-12">
                     </div>
                   </div>
 
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="rounded-full bg-slate-900 w-20 h-20 flex items-center justify-center">
-                      <img src="/images/integration-icon-05.svg" class="w-12 h-12">
+                      <img src= "./images/integration-icon-05.svg" class="w-12 h-12">
                     </div>
                   </div>
 
                   <div class="flex justify-center items-center bg-slate-800 p-8">
                     <div class="rounded-full bg-slate-900 w-20 h-20 flex items-center justify-center">
-                      <img src="/images/integration-icon-06.svg" class="w-12 h-12">
+                      <img src="./images/integration-icon-06.svg" class="w-12 h-12">
                     </div>
                   </div>
                 </div>
