--- a/signup.html
+++ b/signup.html
@@ -55,7 +55,8 @@
 
 
 
-        <section class="mx-36 py-6">
+      <section class="mx-4 sm:mx-8 md:mx-16 lg:mx-36 py-6">
+
           
           <div class="grid grid-cols-1 lg:grid-cols-2  items-center">
            <div class="flex flex-col">
